--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Get to know the guy behind TechThomas" />
-    <meta name="og:title" content="TechThomas" />
+    <meta property="og:title" content="TechThomas" />
     <meta
-      name="og:description"
+      property="og:description"
       content="Get to know the guy behind TechThomas"
     />
-    <meta meta="og:type" content="website" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://techthomas.dk" />
+    <meta property="og:image" content="https://techthomas.dk/logo_light.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_light.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TechThomas</title>
