--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techthomas.dk" />
-    <meta property="og:image" content="https://techthomas.dk/logo_light.svg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo_light.svg" />
+    <meta name="og:site_name" content="TechThomas.dk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_light.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>TechThomas</title>
