some adjustments for thch and other minor stuff

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/logo_light.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Get to know the guy behind TechThomas" />
-    <meta property="og:title" content="TechThomas" />
+    <meta name="description" content="Get to know the guy behind thch" />
+    <meta property="og:title" content="thch" />
     <meta
       property="og:description"
-      content="Get to know the guy behind TechThomas"
+      content="Get to know the guy behind thch"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techthomas.dk" />
+    <meta property="og:url" content="https://thch.dk" />
     <meta property="og:image" content="%PUBLIC_URL%/logo_light.svg" />
-    <meta name="og:site_name" content="TechThomas.dk" />
+    <meta name="og:site_name" content="thch.dk" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_light.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>TechThomas</title>
+    <title>thch</title>
   </head>
 
   <body>
